# tfgan

./: note.txt
data_generator/: angle_class.txt  generate_data.py  generate_data.sh  ospray_launcher.py  render_random_meta.py  render_volume_images.py  tf_generator.py
data_generator/TF1D/: black-1.TF1D  engine-1.TF1D  engine-2.TF1D  engine-3.TF1D  engine-4.TF1D  engine-8.TF1D  foot-1-black.TF1D  foot-1.TF1D  foot-2.TF1D  foot-3.TF1D  head-1.TF1D  head-2.TF1D  head-3.TF1D  head-4.TF1D  head-5.TF1D  head-6.TF1D  head-7.TF1D  head_mri-1.TF1D  head_mri-2.TF1D  tooth-1.TF1D  tooth-2.TF1D  tree-3.TF1D  tree-4.TF1D  tree-5.TF1D  tree-6-my.TF1D  tree-7-my.TF1D  tree-8-my.TF1D  vessel-1.TF1D  vessel-4.TF1D  vessel-5.TF1D
data_generator/ospray_renderer/: CMakeLists.txt  ospray_launcher.py
data_generator/ospray_renderer/src/: BMPWriter.cpp  main.cpp
data_generator/rawRender/: rawRender.cpp
datasets/: download_dataset.sh
